# swipe-for-rights-api

./: .gitignore  Dockerfile  Dockerfile-python  LICENSE  Pipfile  Procfile  README.md  app.py  docker-compose.yml  manage.py  pre-push.sh  setup.cfg  setup.py
accounts/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  tests.py  viewsets.py
accounts/migrations/: 0001_initial.py
api/: __init__.py  routes.py  settings.py
api/auth/: controllers.py  routes.py  types.py
api/bills/: controllers.py  routes.py
bills/: serializers.py  tests.py  viewsets.py
bills/migrations/: 0001_initial.py
database/: client.py
database/models/: user.py
helpers/: __init__.py  main.py  models.py  serializers.py  test.py  utils.py  viewsets.py
swipe4rights/: settings.py  urls.py  wsgi.py
swipe_for_rights_api/: annotations.py  authentication.py  routes.py  settings.py
swipe_for_rights_api/auth/: controllers.py  routes.py  types.py
swipe_for_rights_api/bills/: controllers.py  routes.py
swipe_for_rights_api/database/: client.py
swipe_for_rights_api/database/models/: user.py  votes.py
swipe_for_rights_api/votes/: controllers.py  permissions.py  routes.py  types.py
tests/: auth_utils.py  conftest.py  test_hello.py  test_votes.py
tests/factories/: user_factories.py  user_vote_factories.py  users.py  votes.py
votes/: forms.py  models.py  serializers.py  tests.py  viewsets.py
votes/migrations/: 0001_initial.py
