[metadata]
author = Corey Rice
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Education
description = A platform to express your opinion on congressional legislation
keywords = congress, government, bills, civic-tech
license = MIT
long_description = file: README.md
name = swipe_for_rights_api
url = https://github.com/CoreAR/swipe-for-rights-api
version = 0.1.0

[options]
include_package_data = True
install_requires =
  apistar~=0.3
  apistar_jwt~=0.2
  mongoengine~=0.15
  passlib~=1.7
  pyopenstates~=1.1
packages = swipe_for_rights_api

[options.extras_require]
dev =
  pytest~=3.0
  yapf
